--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8081
 
 #mySQL ??, ??? ????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://222.119.100.81:3382/gimbab?serverTimezone=Asia/Seoul
-spring.datasource.username=gimbab
-spring.datasource.password=gimbab
+spring.datasource.url=jdbc:mysql://??/???serverTimezone=Asia/Seoul
+spring.datasource.username=??
+spring.datasource.password=??
 
 #???? ?? ?? ??
 spring.jpa.properties.hibernate.show_sql=true
